bynkc/tests/fixtures/negative/50_brace_and_dir/src/foo/y.bynk
commons foo
type Y = Int
